<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="50"
        android:hint="@string/first_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="50"
        android:hint="@string/second_hint" />

</LinearLayout>