<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HelloActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:padding="10dip"
        android:layout_margin="30dip"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:inputType="textMultiLine"
        android:layout_weight="100"/>

    <TextView
        android:id="@+id/counterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counter_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickMe"
        android:text="@string/button_label" />

</LinearLayout>
